# titus

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile
.github/workflows/: build.yml
cmake/: compile.cmake  dependencies.cmake  integration.cmake
core/: CMakeLists.txt
core/components/: CMakeLists.txt  module.json
core/components/include/core/: components.h  core.h  input.h  renderer.h
core/components/src/: components.c  core.c
core/core/: CMakeLists.txt  module.json
core/core/include/core/: components.h  core.h  input.h  rendering.h
core/core/src/: components.c  core.c  rendering.c
core/input/: CMakeLists.txt  module.json
core/input/src/: input.c  mod.c
core/renderer/: CMakeLists.txt  module.json
core/renderer/resources/: vert.glsl
core/renderer/resources/shaders/: frag.glsl  frag.spv  phong.frag  phong.vert  vert.glsl  vert.spv
core/renderer/src/: components.h  context.h  gpu.c  gpu.h  mod.c  renderer.c  shaders.c  shaders.h
core/renderer/src/phong/: pipeline.c  pipeline.h
examples/: CMakeLists.txt
examples/exploratory/: CMakeLists.txt  module.json
examples/exploratory/src/: exploratory.c
examples/minimal/: CMakeLists.txt  module.json
examples/minimal/src/: mod.c
examples/testingground/: CMakeLists.txt  module.json
examples/testingground/src/: testing.c
package/: CMakeLists.txt  default.pack
runtime/: CMakeLists.txt
runtime/src/: main.c  main.cpp
runtime/src/assert/: assert.h
runtime/src/config/: config.c  config.h
runtime/src/ds/: stb_ds.c  stb_ds.h
runtime/src/error/: error.c  error.h
runtime/src/log/: log.h
runtime/src/module/: module.c  module.h  module.linux.c  module.windows.c  pack.c  pack.h
runtime/src/plugin/: plugin.c  plugin.h
runtime/src/sds/: sds.c  sds.h
runtime/src/serialization/: serialization.c  serialization.h
runtime/src/timer/: timer.h
sdk/: CMakeLists.txt
sdk/cmake/: compile-options.cmake  dependencies.cmake
sdk/include/titus/: context.h  export.hpp  sdk.h  sdk.hpp  version.h
sdk/include/titus/assets/: assets.h
sdk/include/titus/context/: context.h
sdk/include/titus/ds/: stb_ds.h
sdk/include/titus/ecs/: ecs.h
sdk/include/titus/linalg/: mat.h  vec.h
sdk/include/titus/log/: log.h
sdk/include/titus/module/: module.h
sdk/include/titus/sds/: sds.h
sdk/src/: assets.c  ecs.c  log.c  mat.c  sdk.c  sdk.cpp  sds.c  stb_ds.c  vec.c  version.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/rt/: tests.cpp
tests/runtime/: runtime_tests.c
tests/runtime/resources/: metadata.json  required_module.json
tests/sdk/: sdk_tests.c  tests.cpp
